[project]
name = "timesheet-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.3.1",
    "plotly==6.2.0",
    "rich>=14.1.0",
    "streamlit==1.46.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]

[tool.ruff]
# Set as desired, typically 88 (black standard) or 100 (wide).
line-length = 100
